# Projet_POO

./: .gitignore  CMakeLists.txt  README.md  test1.txt  test2.txt
include/: Alive.hpp  Calculs.hpp  Cell.hpp  CellState.hpp  Damned.hpp  Dead.hpp  Folder.hpp  Game.hpp  GameRules.hpp  Grid.hpp  Immortal.hpp  Window.hpp  calculs.hpp  calculsAlive.hpp  calculsDead.hpp  file.hpp
src/: Alive.cpp  Cell.cpp  CellState.cpp  Dead.cpp  Folder.cpp  Game.cpp  GameRules.cpp  Grid.cpp  Window.cpp  calculsAlive.cpp  calculsDead.cpp  file.cpp  main.cpp
src/test_grids/: big_grid_&_glider.txt  blinker.txt  glider.txt
tests/: CMakeLists.txt  test_cell.cpp  test_gamerules.cpp  test_grid.cpp  test_grid_evolution.cpp
